--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "node-fetch": "^2.6.1",
-    "micro": "^9.3.4"
+    "micro": "^9.3.4",
+"@supabase/supabase-js": "^2.32.0"
   }
 }
