--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "node-fetch": "^2.6.1",
     "micro": "^9.3.4",
-"@supabase/supabase-js": "^2.32.0"
+"@supabase/supabase-js": "^2.32.0",
+"cookie": "^0.5.0"
   }
 }
